Add commands to give players scrolls, pages, and books
Closes #7

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,9 +7,20 @@ website: https://github.com/Ameliorate/CivSpellAPI
 main: org.ame.civspell.Main
 
 commands:
-  givescroll:
-    description: Give a player a number of magic scrolls. (Defaults to 1 scroll)
-    usage: /givescroll [player] [spell] {number}
+  csgivescroll:
+    description: Give a player a number of magic scrolls.
+    usage: /csgivescroll [player] [number] [spell (Can contain spaces)]
+    permision: civ-spell-api.give.scroll
+    aliases: csgs
+  csgivespellpage:
+    description: Give a player a number of spell pages.
+    usage: /csgivespellpage [player] [number] [spell (Can contain spaces)]
+    permision: civ-spell-api.give.page
+    aliases: csgsp
+  csgivespellbook:
+    description: Give a player a spellbook.
+    permision: civ-spell-api.give.book
+    aliases: csgsb
   csreload:
     description: Reloads the config of CivSpellAPI from disk.
     usage: /csreload
@@ -23,3 +34,15 @@ permisions:
       civ-spell-api.reload: true
     civ-spell-api.reload:
       description: Reload the config from disk.
+    civ-spell-api.give.*:
+      description: Allows the person to use any of the commands to give scrolls and other spell related items.
+      children:
+        civ-spell-api.give.scroll: true
+        civ-spell-api.give.page: true
+        civ-spell-api.give.book: true
+    civ-spell-api.give.scroll:
+      description: Allows the player to use the /csgivescroll command to obtain any scroll for free.
+    civ-spell-api.give.page:
+      description: Allows the player to use /csgivespellpage to obtain and spellpage for free.
+    civ-spell-api.give.book:
+      description: Allows the player to use /csgivespellbook to obtain a spellbook for free.
