Move everything to pw.amel package space

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,7 +4,7 @@ description: Adds an api to add spells to civcraft-type servers
 authors: [Amelorate]
 website: https://github.com/Ameliorate/CivSpellAPI
 
-main: org.ame.civspell.Main
+main: pw.amel.Main
 
 commands:
   csgivescroll:
