Add basic usage of ItemExpression
Currently you still have to define a triggerItem, I think.
But it will use a ItemExpression if you give one for most
things.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,6 @@
 antiOopsCoolDownTicks: 5
 # This cooldown prevents accidentally casting multiple valuable scrolls when only one use was intended.
-# It is not for game balance. See [TODO: Add a meta-spell for cooldowns]
+# It is not for game balance. See the cooldown effect for game balance cooldowns.
 
 mana:
   manaMode: vanilla
